Added minified standalone file that encapsulates the parser and the editor

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <head>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="lib/markdown.min.js"></script>
-    <script src="src/markdownEditor.js"></script>
+    <!-- <script src="lib/markdown.min.js"></script> -->
+    <!-- <script src="src/markdownEditor.js"></script> -->
+    <script src="./markdownEditor.min.js"></script>
     <link type="text/css" rel="stylesheet" href="src/markdownEditor.css" />
 </head>
 
