Starting work on the button bar

--- a/examples/buttonBar.html
+++ b/examples/buttonBar.html
@@ -1,13 +1,9 @@
 <html>
 <head>
-
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <!-- 
-    <script src="lib/markdown.min.js"></script>
-    <script src="src/markdownEditor.js"></script>
-    -->
-    <script src="./markdownEditor.min.js"></script>
-    <link type="text/css" rel="stylesheet" href="src/markdownEditor.css" />
+    <script src="../lib/markdown.min.js"></script>
+    <script src="../src/markdownEditor.js"></script>
+    <link type="text/css" rel="stylesheet" href="../src/markdownEditor.css" />
 </head>
 
 <body>
@@ -34,8 +30,6 @@ good idea to encode %3Ctags%3E
             } 
         }
     );
-    // md.data( 'markdownEditor' ).test();
-    // md.markdownEditor( 'setValue', 'update <div>with value</div>' );
 
 </script>
 </html>
