Add custom button to existing markdown editor

--- a/examples/buttonBar.html
+++ b/examples/buttonBar.html
@@ -30,6 +30,8 @@ good idea to encode %3Ctags%3E
             } 
         }
     );
+    
+    md.markdownEditor( 'addButton', { label: 'test' } );
 
 </script>
 </html>
